# symposium-2024-rag-application

./: .env  LICENSE.txt  README.md  pyproject.toml
src/symposium_2024_rag_application/: __about__.py  test.ipynb
src/symposium_2024_rag_application/rag_demo/88a976fa-8243-4781-b494-b42b055918e4/: index_metadata.pickle
tests/: __init__.py
