[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symposium-2024-rag-application"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "DJ", email = "dj@trunk.tools" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/DJ/symposium-2024-rag-application#readme"
Issues = "https://github.com/DJ/symposium-2024-rag-application/issues"
Source = "https://github.com/DJ/symposium-2024-rag-application"

[tool.hatch.version]
path = "src/symposium_2024_rag_application/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/symposium_2024_rag_application tests}"

[tool.coverage.run]
source_pkgs = ["symposium_2024_rag_application", "tests"]
branch = true
parallel = true
omit = [
  "src/symposium_2024_rag_application/__about__.py",
]

[tool.coverage.paths]
symposium_2024_rag_application = ["src/symposium_2024_rag_application", "*/symposium-2024-rag-application/src/symposium_2024_rag_application"]
tests = ["tests", "*/symposium-2024-rag-application/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
